2018-07-21, S3QL 2.29

  * Removal of files that have not yet been uploaded to the backend is
    now faster, with less data being uploaded only to be removed
    shortly after.

  * Clarified NFS support in documentation.

  * contrib/clone_fs.py is now working again.

2018-06-14, S3QL 2.28

  * Fixed upgrade process for unencrypted filesystems (was broken in
    2.27 and 2.27.1).

  * mount.s3ql now checks /proc/mounts to determine if a storage url
    is already mounted rather than just relying on flags in the
    backend.

  * Fixed a busy loop, where mount.s3ql would perform normally but
    consume much more CPU than needed.

  * Temporary SQLite files are now placed in --cachedir rather
    than the system temp folder (typically /tmp).

2018-06-09, S3QL 2.27.1

  * Fixed a test failure in tests/t1_dump.py

2018-06-09, S3QL 2.27

  * The internal file system revision has changed. File systems
    created with S3QL 2.27 or newer are not compatible with prior S3QL
    versions.

    To update an existing file system to the newest revision, use the
    's3qladm upgrade' command. During the upgrade, the metadata for
    all storage objects needs to be updated (so this may take a
    while).

  * fsck.s3ql is now able to recover blocks that were in transit
    during a file system crash.

  * Command line options that are common to all S3QL commands that
    accept a storage URL (e.g. ``--cachedir`` or
    ``--backend-options``) may now also been specified in the
    *authinfo2* file by omitting the two leading dashes.

  * Fixed a data corruption issue when mount.s3ql is terminated
    without being able to clean up (e.g. due to SIGKILL or the
    computer being power cycled).

  * [SECURITY] Fixed a security vulnerability in the validation of object
    metadata. All past versions of S3QL are affected by a replay
    attack where a malicious person in control of the backend is able
    to present old versions of the filesystem metadata database as